Support WebCache files.

--- a/parser/conversion.spec.yaml
+++ b/parser/conversion.spec.yaml
@@ -24,4 +24,7 @@ Structs:
   - CATALOG_TYPE_LONG_VALUE
   - ESENT_DATA_DEFINITION_HEADER
   - ESENT_CATALOG_DATA_DEFINITION_ENTRY
+  - RecordTag
+
+  # This one is here to include some utility functions we might need.
   - Misc
