Added GUID cell type (#1)
To support new User Access Log type ESE files.

--- a/parser/conversion.spec.yaml
+++ b/parser/conversion.spec.yaml
@@ -25,6 +25,7 @@ Structs:
   - ESENT_DATA_DEFINITION_HEADER
   - ESENT_CATALOG_DATA_DEFINITION_ENTRY
   - RecordTag
+  - GUID
 
   # This one is here to include some utility functions we might need.
   - Misc
