--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,10 +5,10 @@ jobs:
     name: CI Test
     runs-on: ubuntu-20.04
     steps:
-    - name: Set up Go 1.20
+    - name: Set up Go 1.19
       uses: actions/setup-go@v2
       with:
-        go-version: 1.20
+        go-version: '^1.20'
       id: go
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
